--- a/res2source.csproj
+++ b/res2source.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-
+	<ApplicationIcon>Assets/icon.ico</ApplicationIcon>
   </PropertyGroup>
   	<ItemGroup>
 		<EmbeddedResource Include="Assets\**" />
